--- a/LabFilters/LabFilters.csproj
+++ b/LabFilters/LabFilters.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BlurFIlter.cs" />
     <Compile Include="Brightness.cs" />
+    <Compile Include="DisplacementFilter.cs" />
     <Compile Include="Embossing.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="Form1.cs">
@@ -57,14 +58,26 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GaussianFilter.cs" />
+    <Compile Include="Glass.cs" />
     <Compile Include="GrayScaleFilter.cs" />
     <Compile Include="InvertFilter.cs" />
+    <Compile Include="Left.cs" />
     <Compile Include="MatrixFilter.cs" />
+    <Compile Include="MedianFilter.cs" />
+    <Compile Include="MotionBlur.cs" />
+    <Compile Include="OperatorPruitta.cs" />
+    <Compile Include="OperatorSharra.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Right.cs" />
+    <Compile Include="RotateLeft.cs" />
+    <Compile Include="RotateRight.cs" />
     <Compile Include="Sepia.cs" />
+    <Compile Include="SFSharpness.cs" />
     <Compile Include="Sharpness.cs" />
     <Compile Include="SobelFilter.cs" />
+    <Compile Include="WavesG.cs" />
+    <Compile Include="WavesV.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
