--- a/LabFilters/LabFilters.csproj
+++ b/LabFilters/LabFilters.csproj
@@ -46,10 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlackHat.cs" />
     <Compile Include="BlurFIlter.cs" />
     <Compile Include="Brightness.cs" />
+    <Compile Include="Closing.cs" />
+    <Compile Include="Dilation.cs" />
     <Compile Include="DisplacementFilter.cs" />
     <Compile Include="Embossing.cs" />
+    <Compile Include="Erosion.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -59,12 +63,18 @@
     </Compile>
     <Compile Include="GaussianFilter.cs" />
     <Compile Include="Glass.cs" />
+    <Compile Include="Grad.cs" />
     <Compile Include="GrayScaleFilter.cs" />
+    <Compile Include="GrayWorld.cs" />
     <Compile Include="InvertFilter.cs" />
     <Compile Include="Left.cs" />
+    <Compile Include="Line.cs" />
+    <Compile Include="LuminousEdges.cs" />
     <Compile Include="MatrixFilter.cs" />
+    <Compile Include="MaxFilter.cs" />
     <Compile Include="MedianFilter.cs" />
     <Compile Include="MotionBlur.cs" />
+    <Compile Include="Opening.cs" />
     <Compile Include="OperatorPruitta.cs" />
     <Compile Include="OperatorSharra.cs" />
     <Compile Include="PerfectReflector.cs" />
@@ -77,6 +87,7 @@
     <Compile Include="SFSharpness.cs" />
     <Compile Include="Sharpness.cs" />
     <Compile Include="SobelFilter.cs" />
+    <Compile Include="TopHat.cs" />
     <Compile Include="WavesG.cs" />
     <Compile Include="WavesV.cs" />
     <EmbeddedResource Include="Form1.resx">
